--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meater</title>
+    <link rel="icon" type="image/png" href="./meater-logo-small.png">
 </head>
 <body>
     <header>
